# Spotify

./: .dockerignore  .env.example  .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  pyproject.toml  railway.toml  requirements.txt
bot/: config.py  i18n.py  keyboards.py  main.py  security.py  store.py  texts.py
bot/admin/: __init__.py  access.py  broadcast.py  dashboard.py  flows.py  forcesub.py  keyboards.py  logbuf.py  repo.py  roles.py  settings_store.py  state.py
bot/db/: database.py  forcesub_repo.py  maintenance.py  repo.py
bot/handlers/: favorites.py  forcesub.py  library.py  links.py  playlist.py  post_download.py  recognize.py  search.py  settings.py  start.py  video.py  youtube.py
bot/services/: audio_analysis.py  audio_effects.py  downloader.py  forcesub.py  matcher.py  pot_provider.py  queue.py  recognizer.py  recommender.py  search_engine.py  spotify.py  tailscale_exit.py  tempsweep.py  tg_limits.py  video_dl.py  ytdlp_common.py
bot/services/media/: __init__.py  base.py  local.py  remote.py
bot/web/: oauth.py
docs/: ARCHITECTURE.md  CONFIGURATION.md  DEPLOYMENT.md  HYBRID_MIGRATION.md
