[project]
name = "trackflow"
version = "1.0.0"
description = "A fast, multi-source music bot for Telegram (Spotify / YouTube / recognition)."
readme = "README.md"
requires-python = ">=3.12"
license = { file = "LICENSE" }
authors = [{ name = "murodovdev" }]
keywords = ["telegram", "bot", "spotify", "youtube", "music", "aiogram", "yt-dlp"]

dependencies = [
    "aiogram>=3.15",
    "aiohttp>=3.9",
    "certifi>=2024.7",
    "numpy>=1.26",
    "yt-dlp>=2025.6.9",
    "mutagen>=1.47",
    "aiosqlite>=0.20",
    "pydantic-settings>=2.6",
    "cryptography>=43.0",
    "shazamio>=0.8.0",
    "psutil>=5.9",
    "uvloop>=0.21; sys_platform == 'linux'",
]

[project.urls]
Repository = "https://github.com/murodovdev/Spotify"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["bot"]
